# cg

./: .gitignore  CLAUDE.md  Makefile  README.md  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/rules/: book  project-doc
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml  gemini-catalog.json  litellm-config.yaml  requirements.txt
bridge/src/: main.rs
litellm_patch/: sitecustomize.py
scripts/: bridge.sh  codex-mirror-drift-check.sh
src/: app-server-session.ts  resilience.ts  runtime.ts  secret-store.ts
src/store/: index.ts  schema.ts
src/store/migrations/: 0000_loving_centennial.sql
src/store/migrations/meta/: 0000_snapshot.json  _journal.json
verify/: app-server-session-live.mjs  bridge-selfcheck.mjs  burst-recovery-live.mjs  burst-sustained-live.mjs  code-execution-live.mjs  compaction-live.mjs  harness-advanced-live.mjs  harness-final-live.mjs  harness-live.mjs  image-input-live.mjs  mcp-live.mjs  parity-live.mjs  patch-necessity-live.mjs  reasoning-live.mjs  resilience.mjs  runtime-live.mjs  secret-store.mjs  store.mjs
verify/fixtures/: mcp-server.mjs
