[package]
name = "codex-gemini-bridge"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Pure-Rust /v1/responses server translating codex's responses API to Gemini"

[[bin]]
name = "codex-gemini-bridge"
path = "src/main.rs"

[dependencies]
async-openai = { version = "0.41", default-features = false, features = ["response-types"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
gemini-rust = { path = "vendor/gemini-rust", version = "1.7.1" }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
